--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <main>
+        
+        <div class="titulos">
+            <h1>Juego de Snake</h1>
+            <p><a href="https://github.com/javierarteagagonzales" target="_blank">Javier Arteaga</a></p>
+        </div>
         <div class="circle">
             <div id="stopwatch" class="stopwatch">00:00</div>
             <div class="buttons">
