centrando en la pantalla

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <main>
+    <main class="central">
         
         <div class="titulos">
             <h1>Juego de Snake</h1>
