ultimos cambios par titulos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Javier Arteaga Gonzales">
     <title>Cronómetro</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
@@ -13,7 +15,7 @@
     <main class="central">
         
         <div class="titulos">
-            <h1>Juego de Snake</h1>
+            <h1>Cronómetro</h1>
             <p><a href="https://github.com/javierarteagagonzales" target="_blank">Javier Arteaga</a></p>
         </div>
         <div class="circle">
